--- a/express-auth/package.json
+++ b/express-auth/package.json
@@ -4,7 +4,7 @@
   "description": "A simple user authentication APIs to authenticate users",
   "main": "index.js",
   "engines": {
-    "node": ">=18.17.0",
+    "node": ">=18.20.2",
     "pnpm": ">=9.3.0",
     "npm": "please-use-pnpm"
   },
@@ -16,7 +16,10 @@
     "type-check": "tsc",
     "prebuild": "rimraf ./dist",
     "build": "pnpm test && pnpm prebuild && tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "prettier": "prettier --write --ignore-unknown */**/*.{js,jsx,json,ts,tsx,scss,css,md}",
+    "prepare": "husky"
   },
   "keywords": [
     "API",
@@ -30,7 +33,17 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.2",
     "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "eslint": "^9.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.2.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.4",
@@ -40,5 +53,10 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
+  },
+  "lint-staged": {
+    "**/*.ts": "pnpm lint",
+    "**/*.*": "pnpm format",
+    "*.js": "eslint --cache --fix"
   }
 }
