--- a/express-auth/tsconfig.json
+++ b/express-auth/tsconfig.json
@@ -3,7 +3,7 @@
   "include": ["src/**/*"],
   "compilerOptions": {
     "types": ["node", "express"],
-    "target": "ESNext",
+    "target": "ES2017",
     "module": "CommonJS",
     "rootDir": "./src",
     "moduleResolution": "Node",
@@ -12,8 +12,9 @@
     "outDir": "dist/",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
     "strict": true,
     "strictNullChecks": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   }
 }
