--- a/express-auth/tsconfig.json
+++ b/express-auth/tsconfig.json
@@ -1,11 +1,15 @@
 {
-  "exclude": ["node_modules", "dist", "src/**/*.test.ts"],
-  "include": ["src/**/*"],
   "compilerOptions": {
     "types": ["node", "express"],
     "target": "ES2017",
     "module": "CommonJS",
-    "rootDir": "./src",
+    "rootDirs": ["./src"],
+    "baseUrl": "./",
+    "paths": {
+      "@core/*": ["src/core/*"],
+      "@infrastructure/*": ["src/infrastructure/*"],
+      "@features/*": ["src/features/*"]
+    },
     "moduleResolution": "Node",
     "typeRoots": ["./node_modules/@types"],
     "sourceMap": true,
@@ -16,5 +20,8 @@
     "strict": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
-  }
+  },
+  "extends": [],
+  "exclude": ["node_modules", "dist", "src/**/*.test.ts"],
+  "include": ["src/**/*.ts"]
 }
