--- a/express-auth/package.json
+++ b/express-auth/package.json
@@ -45,6 +45,7 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
+    "pino-pretty": "^11.2.1",
     "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
     "supertest": "^7.0.0",
@@ -54,7 +55,9 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "pino-http": "^10.1.0"
   },
   "lint-staged": {
     "**/*.ts": "pnpm lint",
