--- a/express-auth/package.json
+++ b/express-auth/package.json
@@ -51,13 +51,15 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.4",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.10",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "pino-http": "^10.1.0"
+    "pino-http": "^10.1.0",
+    "zod": "^3.23.8"
   },
   "lint-staged": {
     "**/*.ts": "pnpm lint",
