--- a/express-auth/package.json
+++ b/express-auth/package.json
@@ -6,22 +6,23 @@
   "private": true,
   "engines": {
     "node": ">=18.20.2",
-    "pnpm": ">=9.3.0",
+    "pnpm": ">=9",
     "npm": "please-use-pnpm"
   },
   "scripts": {
+    "format": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
+    "format:fix": "prettier --write src",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
-    "dev": "ts-node-dev --respawn --clear --transpile-only --ignore-watch node_modules ./src/app.ts",
-    "type-check": "tsc",
-    "prebuild": "rimraf ./dist",
-    "build": "pnpm test && pnpm prebuild && tsc",
-    "clean": "rimraf dist coverage",
-    "start": "node dist/app.js",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "format": "prettier --write --ignore-unknown */**/*.{js,jsx,json,ts,tsx,scss,css,md}",
-    "prepare": "husky"
+    "type-check": "tsc && tsc-alias",
+    "prebuild": "rimraf dist coverage",
+    "build": "pnpm prebuild && swc src --out-dir dist",
+    "build:ts": "pnpm prebuild && tsc",
+    "debug:watch": "nodemon --ext ts --exec node --inspect -r @swc-node/register src/index.ts",
+    "debug:compile": "swc src -w --out-dir dist",
+    "dev": "concurrently \"pnpm debug:compile\" \"pnpm debug:watch\" ",
+    "start": "node dist/src/index.js"
   },
   "keywords": [
     "API",
@@ -31,39 +32,33 @@
   "author": "Sigit Prayitno",
   "license": "ISC",
   "devDependencies": {
+    "@swc-node/register": "^1.10.2",
+    "@swc/cli": "^0.4.0",
+    "@swc/core": "^1.6.7",
+    "@swc/helpers": "^0.5.11",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.9",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
-    "eslint": "^9.5.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.2.0",
-    "husky": "^9.0.11",
+    "concurrently": "^8.2.2",
+    "globals": "^15.8.0",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.7",
+    "nodemon": "^3.1.4",
     "pino-pretty": "^11.2.1",
     "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.1.4",
-    "ts-node-dev": "^2.0.0",
+    "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
-    "typescript": "^5.4.5"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.5.3"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "pino-http": "^10.1.0",
+    "pino-http": "^10.2.0",
     "zod": "^3.23.8"
-  },
-  "lint-staged": {
-    "**/*.ts": "pnpm lint",
-    "**/*.*": "pnpm format",
-    "*.js": "eslint --cache --fix"
   }
 }
