--- a/express-auth/.prettierrc
+++ b/express-auth/.prettierrc
@@ -6,5 +6,13 @@
     "singleQuote": true,
     "tabWidth": 2,
     "trailingComma": "all",
+    "overrides": [
+      {
+        "files": "*.ts",
+        "options": {
+          "parser": "typescript"
+        }
+      }
+    ],
     "plugins": []
   }
