--- a/express-auth/.swcrc
+++ b/express-auth/.swcrc
@@ -8,18 +8,19 @@
         "decorators": true
       },
       "transform": null,
-      "target": "es2021",
+      "target": "esnext",
       "baseUrl": ".",
-      "loose": false,
+      "loose": true,
       "externalHelpers": false,
-      "keepClassNames": false
+      "keepClassNames": true
     },
     "module": {
-      "type": "commonjs",
+      "type": "es6",
       "strict": false,
       "strictMode": false,
       "noInterop": false,
       "lazy": false
     },
-    "minify": true
+    "minify": true,
+    "sourceMaps": true
   }
