--- a/express-auth/tsconfig.json
+++ b/express-auth/tsconfig.json
@@ -2,9 +2,9 @@
   "compilerOptions": {
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "declarationMap": true, // This will allow code navigation between projects.
-    "target": "ES2021",
-    "module": "Node16",
-    "moduleResolution": "Node16", /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
+    "target": "ESNext",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext", /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     "lib": ["ES2021"], /* Specify a list of built-in API declaration groups that can be chose to include in project. */
     /* Do not emit comments to output. */
     "allowJs": true, /* Allow javascript files to be compiled. */
@@ -33,9 +33,11 @@
   },
   "extends": [],
   "include": ["src"],
-  "exclude": ["node_modules", "dist"],
+  //"exclude": ["node_modules", "dist"],
   "ts-node": {
-    "swc": true
+    "swc": true,
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   },
   "compileOnSave": true,
 }
